Added CoreUI Admin template

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Coreui
+@import '~@coreui/coreui/dist/css/coreui-standalone.min.css';
+
 // Estilos globales
 @import "global";
 // Estilos de componentes
