Updated CoreUI imports and dependencies

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -2,10 +2,10 @@
  * Estilos Generales
  */
 
-body {
+/*body {
 	padding-top: 50px;
 }
 h1.page-header {
 	font-size: 1.5rem;
 	font-weight: 400;
-}
+}*/
