--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,5 +8,5 @@ $font-family-sans-serif: "Lato", sans-serif;
 //$line-height-base: 1.6;
 
 //Listas
-$list-group-bg: #f5f5f5;
-$list-group-hover-bg: #fff;
+//$list-group-bg: #f5f5f5;
+//$list-group-hover-bg: #fff;
