--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,7 +9,8 @@
 @import '~bootstrap/scss/bootstrap';
 
 // Coreui
-@import '~@coreui/coreui/dist/css/coreui-standalone.min.css';
+//@import '~@coreui/coreui/dist/css/coreui-standalone.min.css';
+@import '~@coreui/coreui/scss/coreui-standalone';
 
 // Estilos globales
 @import "global";
