Latests changes: breadcrumbs, vuejs, coreui, etc.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,8 +9,8 @@
 @import '~bootstrap/scss/bootstrap';
 
 // Coreui
-//@import '~@coreui/coreui/dist/css/coreui-standalone.min.css';
-@import '~@coreui/coreui/scss/coreui-standalone';
+//@import '~@coreui/coreui/scss/coreui-standalone';
+@import '~@coreui/coreui/scss/coreui';
 
 // Estilos globales
 @import "global";
