--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,12 +1,16 @@
 
 // Body
-$body-bg: #f5f8fa;
+$body-bg: #e4e5e6;
 
 // Typography
 $font-family-sans-serif: "Lato", sans-serif;
-//$font-size-base: 1rem;//0.9rem;
+$font-size-base: 0.875rem;//0.9rem;
 //$line-height-base: 1.6;
 
 //Listas
 //$list-group-bg: #f5f5f5;
 //$list-group-hover-bg: #fff;
+
+//Breadcrumbs
+$breadcrumb-bg: #fff;
+$breadcrumb-border-radius: 0;
