--- a/resources/sass/components/_sidebar.scss
+++ b/resources/sass/components/_sidebar.scss
@@ -3,7 +3,7 @@
  */
 
 /* Hide for mobile, show later */
-.sidebar {
+/*.sidebar {
 	display: none;
 	@include media-breakpoint-up(md) {
 		position: fixed;
@@ -14,12 +14,12 @@
 		display: block;
 		//padding: 20px;
 		overflow-x: hidden;
-		overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+		overflow-y: auto; 
 		background-color: #f5f5f5;
 		border-right: 1px solid #eee;
 	}
 	> .list-group {
-		margin-right: -21px; /* 20px padding + 1px border */
+		margin-right: -21px; 
 		margin-bottom: 20px;
 		margin-left: -20px;
 	}
@@ -93,3 +93,4 @@
 		}
 	}
 }
+*/
