--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,13 +3,23 @@
 $body-bg: #e4e5e6;
 
 // Typography
-$font-family-sans-serif: "Lato", sans-serif;
-$font-size-base: 0.875rem;//0.9rem;
-//$line-height-base: 1.6;
+//$font-family-sans-serif: "Lato", sans-serif;
+$font-family-sans-serif: 'Roboto', sans-serif;;
+$font-size-base: 0.9rem;//0.875rem;
+$line-height-base: 1.6;
+$headings-font-weight: 500;
 
-//Listas
-//$list-group-bg: #f5f5f5;
-//$list-group-hover-bg: #fff;
+// Colors
+$blue: #3490dc;
+$indigo: #6574cd;
+$purple: #9561e2;
+$pink: #f66D9b;
+$red: #e3342f;
+$orange: #f6993f;
+$yellow: #ffed4a;
+$green: #38c172;
+$teal: #4dc0b5;
+$cyan: #6cb2eb;
 
 //Breadcrumbs
 $breadcrumb-bg: #fff;
