--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16209,7 +16209,8 @@ label {
   font-weight: 600;
 }
 
-.form-group.required .col-form-label:after {
+.form-group.required .col-form-label:after,
+.form-group .row.required .col-form-label:after {
   content: "*";
   color: red;
 }
